--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mário Tonelli</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
   teste
