--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mário Tonelli</title>
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="dist/css/mariotonelli.min.css">
 </head>
+
 <body>
-  teste
+  <div class="teste">balbla</div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script type="text/javascript" src="dist/js/mariotonelli.min.js"></script>
 </body>
+
 </html>
