--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <header class="headerMario">
+    <ul class="headerMario-lista">
+      <li class="headerMario-item">Portfólio</li>
+      <li class="headerMario-item">Mário Tonelli</li>
+      <li class="headerMario-item">Currículo</li>
+      <li class="headerMario-item">Redes Sociais</li>
+    </ul>
+  </header>
   <div class="teste">balbla</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script type="text/javascript" src="dist/js/mariotonelli.min.js"></script>
