Adicionando logo no header

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
       <li class="headerMario-item">Currículo</li>
       <li class="headerMario-item">Redes Sociais</li>
     </ul>
+
+    <div class="logo">
+      <h1>
+        <a href="#" id="logo-Mario">
+          <img src="src/img/logo.png" alt="Mário Tonelli">
+        </a>
+      </h1>
+    </div>
   </header>
-  <div class="teste">balbla</div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script type="text/javascript" src="dist/js/mariotonelli.min.js"></script>
 </body>
